Accessibilità - Fix id in single-evento.php e single-notizia.php per avere id univoci all'interno della pagina web - Fix spacing in single-notizia.php

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,6 +136,11 @@ html {
 	background-color: #17324d !important;
 }
 
+.customSpacingDiv {
+	display: flex;
+	gap: 4px;
+}
+
 .customSpacing {
 	height: 24px !important;
 	transform: translateY(-2px) !important;
